# Laius

./: README.md
kernel_hook/: b+tree.hpp  bfs.cpp  hotspot.cpp  kmeans.cpp  lavaMD.cpp  lud.hpp  myoctye.hpp  nw.hpp  pathfinder.hpp
mps/: build.sh  cudnn_server.sh  sss.txt
mps/data/: cudnnActivationForward_b.csv  cudnnActivationForward_t.csv  cudnnAddTensor_b.csv  cudnnAddTensor_t.csv  cudnnConvolutionForward_b.csv  cudnnConvolutionForward_t.csv  cudnnPoolingForward_b.csv  cudnnPoolingForward_t.csv  cudnnSoftmaxForward_b.csv  cudnnSoftmaxForward_t.csv  data_band.txt  data_cudnn.tar  data_cudnn_old.tar  data_ipc.txt  dig.txt  face.txt  face.xlsx  googlenet.txt  googlenet.xlsx  vgg.txt  vgg.xlsx
mps/include/cublas/: check.hpp  cublas_api.hpp  cublas_server.hpp
mps/include/cublas/cublas_api/: base_api.hpp  sgemm.hpp
mps/include/cuda/: ipc.hpp
mps/include/cuda/apps/: kernel_args.hpp
mps/include/cuda/apps/bfs/: bfs.hpp
mps/include/cuda/apps/kmeans/: kmeans.hpp
mps/include/cuda/apps/lavaMD/: lavaMD.hpp
mps/include/cuda/apps/lud/: lud.hpp
mps/include/cuda/apps/myocyte/: myocyte.hpp
mps/include/cudnn/: check.hpp
mps/include/cudnn/cudnn_api/: addtensor.hpp
mps/src/cublas/: CMakeLists.txt  cublas_api.cc  cublas_data.cc  cublas_hook.cc  cublas_server.cc  init.cc  schedule.cc
mps/src/cuda/: CMakeLists.txt  c_hook.cc  cuda_hook.cc  ptr_hook.cc  schedule.cc.back
mps/src/cudnn/: CMakeLists.txt  cudnn_api.cc  cudnn_hook.cc  cudnn_hook.cc.back  cudnn_server.cc  init.cc.back  tonic_hook.cc
mps/src/schedule/: CMakeLists.txt  init.cc  schedule.cc  schedule_back.cc  schedule_cublas.cc  schedule_new.cc  schedule_sem.cc
mps/test/: CMakeLists.txt
mps_NB/: CMakeLists.txt  test_schedule.sh
mps_NB/include/cuda/: ipc_sem.hpp
mps_NB/include/cuda/apps/bplustree/: bplustree.hpp
mps_NB/include/cuda/apps/hotspot/: hotspot.hpp
mps_NB/include/cuda/apps/nw/: nw.hpp
mps_NB/include/cuda/apps/pathfinder/: pathfinder.hpp
mps_NB/include/schedule/: schedule.hpp
mps_NB/test/: cudnn_server.sh  test_schedule.sh
mps_NC/include/cublas/: cublas_ipc.hpp
mps_NC/include/cuda/: common.hpp  ipc.hpp  kernel_all.hpp
mps_cudnn/: CMakeLists.txt  Makefile  build.sh  test.sh  test_optimized.sh  testcudnn.sh
mps_cudnn/data/: activationfwd.txt  addtensor.txt  convolutionfwd.txt  cudnnActivationForward_b.csv  cudnnActivationForward_b.xlsx  cudnnActivationForward_t.csv  cudnnActivationForward_t.xlsx  cudnnAddTensor.csv  cudnnAddTensor.xlsx  cudnnConvolutionForward.csv  cudnnConvolutionForward.xlsx  cudnnPoolingForward.csv  cudnnPoolingForward.xlsx  cudnnSoftmaxForward.csv  cudnnSoftmaxForward.xlsx  poolingfwd.txt  softmaxfwd.txt
mps_cudnn/include/: check.hpp
mps_cudnn/include/kernel/: ipc.h
mps_cudnn/include/naive/: activation.hpp  addtensor.hpp  base_api.hpp  convolution.hpp  cudnn_ipc.hpp  pooling.hpp  softmax.hpp
mps_cudnn/include/optimized/: cudnn_api.hpp  cudnn_ipc.hpp  server.hpp
mps_cudnn/include/optimized/cudnn_api/: activation_fwd.hpp  addtensor.hpp  base_compute.hpp  conv_fwd.hpp  pooling_fwd.hpp  softmax_fwd.hpp
mps_cudnn/src/kernel/: CMakeLists.txt  c_wrap.cc  cuda_wrap.cc  init.cc  origin.cu
mps_cudnn/src/naive/: CMakeLists.txt  init.cc  server.cc  wrap.cc
mps_cudnn/src/optimized/: CMakeLists.txt  cudnn_api.cc  cudnn_hook.cc  init.cc  server.cc
mps_cudnn/src/origin/: CMakeLists.txt  wrap.cc
mps_cudnn/src/test/: CMakeLists.txt  test_hook.cc  test_load.cc  test_server.cc
mps_reconfig/: Makefile  check.hpp  cuda_wrap.cpp  cudnn_ipc.hpp  data_ipc.txt  init.cpp  ipc.h  ipc.hpp  libc_wrap.cpp  origin.cu  schedule.cpp  schedule.sh  schedule_new.cpp  uninit.cpp
